[package]
name = "vfstool-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bstr = "0.2"
clap = { version = "4.1.4", features = ["derive"] }
clippy = "0.0.302"
libflate = "1.2.0"
mlua = { version = "0.8.6", features = ["luau","serialize"] }
serde = { version = "1.0.147", features = ["derive"] }

[build-dependencies]
mlua = { version = "0.8.6", features = ["luau"] } #so we can pre-compile lua code
